--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Control Remoto</title>
     <link href="/index.61d3354a.css" rel="stylesheet">
     <!-- <script src="//unpkg.com/alpinejs" defer></script> -->
     <script src="/index.54632f9a.js" defer=""></script>
